--- a/project/invioce/index.html
+++ b/project/invioce/index.html
@@ -50,13 +50,13 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #6366F1 0%, #8B5CF6 100%);
+            background: linear-gradient(135deg, #FFA44A 0%, #F47A1F 100%);
             transition: all 0.3s ease;
         }
 
         .btn-primary:hover {
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(99, 102, 241, 0.4);
+            box-shadow: 0 5px 15px rgba(244, 122, 31, 0.4);
         }
 
         .btn-secondary {
